# voxelize-cuda

./: .gitignore  CMakeLists.txt  README.md  main.cpp  output.txt
include/: VoxelizerCPU.hpp  VoxelizerGPU.h  common.h  kernel.h  visualizer.hpp
src/: VoxelizerCPU.cpp  VoxelizerGPU.cpp  preprocess.cpp  preprocess_kernel.cu  visualizer.cpp
